--- a/bootstrap3-dialog-master-leo/pruebaLeo.html
+++ b/bootstrap3-dialog-master-leo/pruebaLeo.html
@@ -36,6 +36,11 @@ function modalMensaje(titulo1, mensaje, label1, titulo2){
 	 BootstrapDialog.show({
             title: titulo1,
             message: mensaje,
+            cssClass:'prueba',
+            type:'type-warning',
+            size:'size-wide',
+            closable:true,
+            spinicon:'glyphicon glyphicon-eur',
             buttons: [{
                 label: label1,
                 action: function(dialog) {
@@ -50,7 +55,7 @@ function modalMensaje(titulo1, mensaje, label1, titulo2){
 		        id: 'btn-ok',   
 		        icon: 'glyphicon glyphicon-check',       
 		        label: 'OK',
-		        cssClass: 'btn-primary',
+		        cssClass: 'btn-info',
 		        data: {
 		            js: 'btn-confirm',
 		            'user-id': '3'
